--- a/part4/package.json
+++ b/part4/package.json
@@ -7,7 +7,9 @@
     "dev": "cross-env NODE_ENV=development node --watch index.js",
     "test": "cross-env NODE_ENV=test node --test",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint --fix .",
+    "format": "prettier --write .",
+    "prettier:check": "prettier --check ."
   },
   "keywords": [],
   "author": "Ivy Xu",
@@ -28,6 +30,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^9.23.0",
     "globals": "^16.0.0",
+    "prettier": "^3.5.3",
     "supertest": "^7.1.0"
   }
 }
