--- a/part5/bloglist-frontend/package.json
+++ b/part5/bloglist-frontend/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier --write .",
+    "prettier:check": "prettier --check .",
     "preview": "vite preview",
     "test": "vitest run"
   },
@@ -29,6 +31,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-vitest-globals": "^1.5.0",
     "jsdom": "^26.0.0",
+    "prettier": "^3.5.3",
     "vite": "^4.4.5",
     "vitest": "^3.1.1"
   }
