--- a/part7/bloglist/redux-bloglist/package.json
+++ b/part7/bloglist/redux-bloglist/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bloglist-frontend",
+  "name": "redux-bloglist",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -16,7 +16,8 @@
     "axios": "^1.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
