remove old test files

--- a/part7/bloglist/redux-bloglist/package.json
+++ b/part7/bloglist/redux-bloglist/package.json
@@ -9,8 +9,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write .",
     "prettier:check": "prettier --check .",
-    "preview": "vite preview",
-    "test": "vitest run"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
