--- a/part7/bloglist/query-bloglist/package.json
+++ b/part7/bloglist/query-bloglist/package.json
@@ -9,8 +9,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write .",
     "prettier:check": "prettier --check .",
-    "preview": "vite preview",
-    "test": "vitest run"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.74.4",
