--- a/part7/bloglist/query-bloglist/package.json
+++ b/part7/bloglist/query-bloglist/package.json
@@ -12,6 +12,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
     "@tanstack/react-query": "^5.74.4",
     "axios": "^1.4.0",
     "prop-types": "^15.8.1",
