--- a/part8/graphql-library-backend/package.json
+++ b/part8/graphql-library-backend/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "@apollo/server": "^4.12.0",
-    "graphql": "^16.11.0"
+    "graphql": "^16.11.0",
+    "uuid": "^11.1.0"
   }
 }
