--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -10,7 +10,10 @@
   "description": "",
   "dependencies": {
     "@apollo/server": "^4.12.0",
+    "dotenv": "^16.5.0",
     "graphql": "^16.11.0",
+    "mongoose": "^7.8.7",
+    "mongoose-unique-validator": "^4.0.1",
     "uuid": "^11.1.0"
   }
 }
