--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -10,7 +10,9 @@
   "description": "",
   "dependencies": {
     "@apollo/server": "^4.12.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "express": "^4.21.2",
     "graphql": "^16.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
