--- a/part9/patientor_backend/package.json
+++ b/part9/patientor_backend/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@eslint/js": "^9.27.0",
     "@stylistic/eslint-plugin": "^4.2.0",
+    "@types/cors": "^2.8.18",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.2",
     "eslint": "^9.27.0",
@@ -22,6 +23,7 @@
     "typescript-eslint": "^8.32.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   }
 }
