--- a/part9/patientor/patientor_backend/package.json
+++ b/part9/patientor/patientor_backend/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.3",
     "@stylistic/eslint-plugin": "^5.9.0",
+    "@types/cors": "^2.8.19",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.6",
     "eslint": "^9.39.3",
@@ -23,6 +24,7 @@
     "typescript-eslint": "^8.56.1"
   },
   "dependencies": {
+    "cors": "^2.8.6",
     "express": "^5.2.1"
   }
 }
